# kafka-routing-orchestrator

./: .env.example  INTERVIEW.md  README.md  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  extensions.py
app/adapters/: __init__.py  db.py  kafka.py  redis.py
app/api/: __init__.py  agents.py  assignments.py  customers.py
app/models/: __init__.py  agent.py  assignment.py  customer.py
app/repositories/: __init__.py  agent_repo.py  assignment_repo.py  customer_repo.py
app/schemas/: __init__.py  agent.py  customer.py  routing.py
app/services/: __init__.py  agent_service.py  routing_service.py
app/templates/: error.html
app/utils/: __init__.py  errors.py  logging.py
scripts/: create_topic.py  run_local.py  seed_data.py
workers/: __init__.py  agent_status_worker.py  kafka_utils.py  router_worker.py
