[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-center-routing"
version = "0.1.0"
description = "A scalable Flask + Kafka based contact center routing system for SaaS applications."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["flask", "kafka", "microservices", "contact-center", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "Flask>=2.2",
    "confluent-kafka>=1.9",
    "SQLAlchemy>=1.4",
    "psycopg2-binary>=2.9",
    "redis>=4.5",
    "pydantic>=2.0",
    "python-json-logger>=2.0",
    "Flask-Migrate>=4.0"
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
